--- a/examples/node/package.json
+++ b/examples/node/package.json
@@ -1,14 +1,18 @@
 {
   "name": "blinktrade-js-example",
   "version": "1.0.0",
+  "private": true,
   "description": "BlinkTradeJS example",
   "main": "bundle-node.js",
   "scripts": {
+    "build": "rm -rf node_modules/blinktrade && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "blinktrade": "../"
+    "blinktrade": "../../"
   },
   "author": "Cesar Augusto",
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "devDependencies": {
+  }
 }
