--- a/package.json
+++ b/package.json
@@ -2,33 +2,32 @@
   "name": "blinktrade",
   "version": "0.0.1",
   "description": "BlinkTrade Client for node.js",
-  "main": "index.js",
+  "main": "lib/index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "clean": "rimraf dist",
+    "clean": "",
     "lint": "eslint src test",
     "flow": "flow check",
     "check": "npm run lint && npm run test ",
-    "build": "webpack ./index.js --config webpack.dev.js dist/bundle.js",
-    "build:example:node": "webpack examples/node.js --config webpack.dev.js examples/bundle/bundle-node.js",
-    "build:example:rest": "webpack examples/rest.js --config webpack.dev.js examples/bundle/bundle-rest.js",
-    "build:examples": "npm run build:example:node && npm run build:example:rest",
-    "build:examples:blinktrade": "cd examples && rm -rf node_modules && npm install && cd .. && npm run build:examples",
-    "test": "NODE_ENV=test mocha --compilers js:babel-register --recursive"
+    "build:src": "babel src --out-dir lib",
+    "build:dev": "cross-env NODE_ENV=production webpack ./src/index.js dist/blinktrade.js",
+    "build:prod": "cross-env NODE_ENV=production webpack ./src/index.js dist/blinktrade.min.js",
+    "build": "npm run build:src && npm run build:dev && npm run build:prod",
+    "test": "NODE_ENV=test mocha --compilers js:babel-register --recursive",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "blinktrade",
     "node"
   ],
-  "author": "Cesar August, Rodrigo Souza",
+  "author": "Cesar Augusto, Rodrigo Souza",
   "license": "GPLv3",
   "dependencies": {
     "fetch-jsonp": "^1.0.1",
     "fingerprintjs2": "^1.4.1",
     "getmac": "^1.2.1",
-    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.15.0",
     "node-fetch": "^1.6.0",
     "node-uuid": "^1.4.7",
@@ -43,6 +42,7 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
+    "cross-env": "^2.0.1",
     "eslint": "2.13.1",
     "eslint-config-airbnb-base": "^3.0.1",
     "eslint-plugin-import": "^1.14.0",
@@ -52,6 +52,7 @@
     "moment": "^2.14.1",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.5",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "webpack-node-externals": "^1.3.3"
   }
 }
