--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.15.0",
     "node-fetch": "^1.6.0",
     "node-uuid": "^1.4.7",
+    "nodeify": "^1.0.0",
     "sjcl": "^1.0.3",
     "ws": "^1.1.1"
   },
