--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "consistent-return": 0,
     "no-nested-ternary": 0,
     "no-multi-spaces": 0,
+    "no-unused-expressions": 0,
     "newline-per-chained-call": 0,
   }
 }
