Replaced node-fetch with isomorphic-fetch

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "fetch-jsonp": "^1.0.1",
     "fingerprintjs2": "^1.4.1",
     "getmac": "^1.2.1",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.15.0",
-    "node-fetch": "^1.6.0",
     "node-uuid": "^1.4.7",
     "nodeify": "^1.0.0",
     "sjcl": "^1.0.3",
