--- a/.flowconfig
+++ b/.flowconfig
@@ -1,7 +1,15 @@
 [ignore]
+.*/examples/browser/node_modules/*
+.*/examples/node/node_modules/*
+.*/node_modules/editions/source/index.js
 
 [include]
 
 [libs]
+interfaces
 
 [options]
+suppress_comment= \\(.\\|\n\\)*\\$FlowFixMe
+
+[version]
+0.31.0
