--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "no-unused-vars": [2, {"varsIgnorePattern": "Columns|VerificationData" }],
   },
   "globals": {
-    "BlinkTradeBase": true
+    "BlinkTradeBase": true,
+    "Stun": true,
   }
 }
