--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
   "dependencies": {
     "fetch-jsonp": "^1.0.1",
     "fingerprintjs2": "^1.4.1",
-    "getmac": "^1.2.1",
+    "ip": "^1.1.3",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.15.0",
-    "node-uuid": "^1.4.7",
+    "macaddress": "^0.2.8",
     "nodeify": "^1.0.0",
     "sjcl": "^1.0.3",
     "ws": "^1.1.1"
