--- a/.flowconfig
+++ b/.flowconfig
@@ -1,4 +1,6 @@
 [ignore]
+./dist/*
+./lib/*
 .*/examples/browser/node_modules/*
 .*/examples/node/node_modules/*
 .*/node_modules/editions/source/index.js
