--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   "parser": "babel-eslint",
   "rules": {
     "max-len": 0,
+    "global-require": 0,
     "arrow-body-style": 0,
     "consistent-return": 0,
     "no-nested-ternary": 0,
@@ -14,10 +15,14 @@
     "no-case-declarations": 0,
     "newline-per-chained-call": 0,
     "no-unused-vars": [2, {"varsIgnorePattern": "Columns|VerificationData" }],
+    "new-cap": [2, { "newIsCapExceptions": [ "hmac" ] }]
   },
   "globals": {
     "BlinkTradeBase": true,
+    "BlinkTradeRest": true,
     "BlinkTradeEnv": true,
     "Stun": true,
+    "Request": true,
+    "window": true
   }
 }
