--- a/package.json
+++ b/package.json
@@ -44,11 +44,10 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
-    "cross-env": "^2.0.1",
-    "eslint": "2.13.1",
-    "eslint-config-airbnb-base": "^3.0.1",
-    "eslint-plugin-import": "^1.14.0",
-    "eslint_d": "^4.0.1",
+    "cross-env": "^3.1.3",
+    "eslint": "^3.8.1",
+    "eslint-config-airbnb-base": "^9.0.0",
+    "eslint-plugin-import": "^2.0.1",
     "json-loader": "^0.5.4",
     "mocha": "^3.0.2",
     "moment": "^2.14.1",
