--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "flow": "flow check",
     "check": "npm run lint && npm run test ",
     "build:src": "babel src --out-dir lib",
-    "build:dev": "cross-env NODE_ENV=development webpack ./src/index.js dist/blinktrade.js",
-    "build:prod": "cross-env NODE_ENV=production webpack ./src/index.js dist/blinktrade.min.js",
+    "build:commonjs": "webpack",
+    "build:commonjs:min": "cross-env NODE_ENV=production webpack",
+    "build:browser": "webpack --config webpack.config.browser.js",
+    "build:browser:min": "cross-env NODE_ENV=production webpack --config webpack.config.browser.js",
+    "build:prod": "npm run build:commonjs:min && npm run build:browser:min",
+    "build:dev": "npm run build:commonjs && npm run build:browser",
     "build": "npm run build:src && npm run build:dev && npm run build:prod",
     "test": "NODE_ENV=test mocha --compilers js:babel-register --recursive",
     "prepublish": "npm run build"
@@ -40,6 +44,7 @@
     "babel-cli": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-flow-strip-types": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
