--- a/.eslintrc
+++ b/.eslintrc
@@ -2,9 +2,13 @@
   "env": {
     "mocha": true
   },
-  "extends": "airbnb-base",
+  "extends": ["airbnb-base", "plugin:flowtype/recommended"],
   "parser": "babel-eslint",
   "rules": {
+    "flowtype/space-after-type-colon": 0,
+    "flowtype/semi": [2, "always"],
+    "flowtype/object-type-delimiter": [2, "comma"],
+    "import/prefer-default-export": 0,
     "max-len": 0,
     "global-require": 0,
     "arrow-body-style": 0,
@@ -24,9 +28,12 @@
   "globals": {
     "BlinkTradeBase": true,
     "BlinkTradeRest": true,
+    "BlinkTradeWS":  true,
     "BlinkTradeEnv": true,
     "Stun": true,
     "Request": true,
+    "Listener": true,
     "window": true
-  }
+  },
+  "plugins": ["flowtype"]
 }
