--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "clean": "",
     "lint": "eslint src test",
-    "flow": "flow check",
+    "flow": "flow",
     "check": "yarn run lint && yarn run test ",
     "build:src": "babel src --out-dir lib",
     "build:commonjs": "webpack",
@@ -32,6 +32,7 @@
     "eventemitter2": "^2.1.0",
     "fetch-jsonp": "^1.0.1",
     "fingerprintjs2": "^1.4.1",
+    "flow-bin": "^0.43.1",
     "ip": "^1.1.3",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.15.0",
@@ -52,9 +53,10 @@
     "cross-env": "^3.1.3",
     "eslint": "^3.8.1",
     "eslint-config-airbnb-base": "^9.0.0",
+    "eslint-plugin-flowtype": "^2.30.4",
     "eslint-plugin-import": "^2.0.1",
     "json-loader": "^0.5.4",
-    "mocha": "^3.0.2",
+    "mocha": "^3.1.2",
     "moment": "^2.14.1",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
