--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build:prod": "yarn run build:commonjs:min && yarn run build:browser:min",
     "build:dev": "yarn run build:commonjs && yarn run build:browser",
     "build": "yarn run build:src && yarn run build:dev && yarn run build:prod",
-    "test": "NODE_ENV=test mocha --compilers js:babel-register --recursive",
+    "test": "NODE_ENV=test mocha --exit --compilers js:babel-register --recursive",
     "prepublish": "yarn run build"
   },
   "keywords": [
@@ -43,7 +43,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "^8.0.2",
     "babel-loader": "^6.2.5",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-flow-strip-types": "^6.14.0",
@@ -51,12 +51,12 @@
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "cross-env": "^3.1.3",
-    "eslint": "^3.8.1",
-    "eslint-config-airbnb-base": "^9.0.0",
-    "eslint-plugin-flowtype": "^2.30.4",
-    "eslint-plugin-import": "^2.0.1",
+    "eslint": "^4.11.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-flowtype": "^2.39.1",
+    "eslint-plugin-import": "^2.8.0",
     "json-loader": "^0.5.4",
-    "mocha": "^3.1.2",
+    "mocha": "^4.0.1",
     "moment": "^2.14.1",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
