--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,8 @@
     "class-methods-use-this": 0,
     "import/no-extraneous-dependencies": [2, { devDependencies: true }],
     "no-unused-vars": [2, {"varsIgnorePattern": "Columns|VerificationData" }],
-    "new-cap": [2, { "newIsCapExceptions": [ "hmac" ] }]
+    "new-cap": [2, { "newIsCapExceptions": [ "hmac" ] }],
+    "object-curly-newline": 0
   },
   "globals": {
     "BlinkTradeBase": true,
