--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   "dependencies": {
     "eventemitter2": "^2.1.0",
     "fingerprintjs2": "^1.4.1",
+    "fetch-ponyfill": "^4.1.0",
     "ip": "^1.1.3",
-    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.15.0",
     "macaddress": "^0.2.8",
     "nodeify": "^1.0.0",
