--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blinktrade",
-  "version": "0.0.18",
+  "version": "0.1.0-alpha",
   "description": "BlinkTrade Client for node.js",
   "main": "lib/index.js",
   "directories": {
@@ -19,7 +19,9 @@
     "build:prod": "yarn run build:commonjs:min && yarn run build:browser:min",
     "build:dev": "yarn run build:commonjs && yarn run build:browser",
     "build": "yarn run build:src && yarn run build:dev && yarn run build:prod",
-    "test": "NODE_ENV=test mocha --exit --compilers js:babel-register --recursive",
+    "test": "jest",
+    "test:cov": "jest --coverage",
+    "test:watch": "jest --watch",
     "prepublish": "yarn run build"
   },
   "keywords": [
@@ -29,13 +31,15 @@
   "author": "Cesar Augusto, Rodrigo Souza",
   "license": "GPLv3",
   "dependencies": {
+    "babel-jest": "^22.2.2",
     "eventemitter2": "^2.1.0",
-    "fingerprintjs2": "^1.4.1",
     "fetch-ponyfill": "^4.1.0",
+    "fingerprintjs2": "^1.6.1",
     "ip": "^1.1.3",
-    "lodash": "^4.15.0",
+    "jest-cli": "^22.2.2",
     "macaddress": "^0.2.8",
     "nodeify": "^1.0.0",
+    "ramda": "^0.25.0",
     "sjcl": "^1.0.3",
     "ws": "^3.3.1"
   },
@@ -43,20 +47,21 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.2",
     "babel-loader": "^6.4.1",
-    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
     "cross-env": "^5.1.1",
-    "flow-bin": "^0.60.1",
     "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-import": "^2.8.0",
+    "flow-bin": "^0.60.1",
+    "jest": "^22.2.2",
+    "jsdom": "^11.6.2",
     "json-loader": "^0.5.4",
-    "mocha": "^4.1.0",
-    "sinon": "^1.17.6",
+    "mock-socket": "^7.1.0",
+    "sinon": "^4.3.0",
     "webpack": "^1.13.2",
     "webpack-node-externals": "^1.3.3"
   }
