--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "blinktrade",
     "node"
   ],
+  "jest": {
+    "testEnvironment": "jest-environment-node"
+  },
   "author": "Cesar Augusto, Rodrigo Souza",
   "license": "GPLv3",
   "dependencies": {
     "babel-jest": "^22.2.2",
     "eventemitter2": "^2.1.0",
     "fetch-ponyfill": "^4.1.0",
-    "fingerprintjs2": "^1.6.1",
+    "fingerprintjs2": "1.6.1",
     "ip": "^1.1.3",
     "jest-cli": "^22.2.2",
     "macaddress": "^0.2.8",
