Update package.json and yarn.lock

--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
   "name": "blinktrade",
   "version": "0.1.0-beta.4",
-  "description": "BlinkTrade Client for node.js",
-  "main": "lib/index.js",
+  "description": "BlinkTrade client for node.js",
+  "homepage": "https://blinktrade.com/docs",
+  "main": "lib/blinktrade.js",
+  "browser": "dist/blinktrade.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "clean": "",
     "lint": "eslint src test",
     "flow": "flow",
-    "check": "yarn run lint && yarn run test ",
-    "build:src": "babel src --out-dir lib",
-    "build:commonjs": "webpack",
-    "build:commonjs:min": "cross-env NODE_ENV=production webpack",
-    "build:browser": "webpack --config webpack.config.browser.js",
-    "build:browser:min": "cross-env NODE_ENV=production webpack --config webpack.config.browser.js",
-    "build:prod": "yarn run build:commonjs:min && yarn run build:browser:min",
-    "build:dev": "yarn run build:commonjs && yarn run build:browser",
-    "build": "yarn run build:src && yarn run build:dev && yarn run build:prod",
+    "check": "yarn lint && yarn test ",
+    "build:es": "cross-env NODE_ENV=es rollup -c -o es/blinktrade.js",
+    "build:umd": "cross-env NODE_ENV=development rollup -c -o dist/blinktrade.js",
+    "build:umd:min": "cross-env NODE_ENV=production rollup -c -o dist/blinktrade.min.js",
+    "build:commonjs": "cross-env NODE_ENV=cjs rollup -c -o lib/blinktrade.js",
+    "build:prod": "yarn build:umd:min",
+    "build:dev": "yarn build:commonjs && yarn build:umd && yarn build:es",
+    "build": "yarn build:dev && yarn build:prod",
     "test": "jest",
     "test:cov": "jest --coverage",
-    "test:watch": "jest --watch",
-    "prepublish": "yarn run build"
+    "test:watch": "jest --watch"
   },
   "keywords": [
     "blinktrade",
@@ -34,26 +33,21 @@
   "author": "Cesar Augusto, Rodrigo Souza",
   "license": "GPLv3",
   "dependencies": {
-    "babel-jest": "^22.2.2",
-    "eventemitter2": "^2.1.0",
-    "fetch-ponyfill": "^4.1.0",
+    "eventemitter2": "^5.0.1",
+    "fetch-ponyfill": "^6.0.2",
     "fingerprintjs2": "1.6.1",
     "ip": "^1.1.3",
-    "jest-cli": "^22.2.2",
-    "macaddress": "^0.2.8",
+    "js-sha256": "^0.9.0",
+    "macaddress-secure": "^0.2.11",
     "nodeify": "^1.0.0",
     "ramda": "^0.25.0",
-    "sjcl": "^1.0.3",
-    "ws": "^3.3.1"
+    "ws": "^5.1.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.2",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "chai": "^4.1.2",
+    "babel-jest": "^22.2.2",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "cross-env": "^5.1.1",
     "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
@@ -61,11 +55,15 @@
     "eslint-plugin-import": "^2.8.0",
     "flow-bin": "^0.60.1",
     "jest": "^22.2.2",
-    "jsdom": "^11.6.2",
-    "json-loader": "^0.5.4",
-    "mock-socket": "^7.1.0",
-    "sinon": "^4.3.0",
-    "webpack": "^1.13.2",
-    "webpack-node-externals": "^1.3.3"
+    "jest-cli": "^22.2.2",
+    "rollup": "^0.59.0",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-flow": "^1.1.1",
+    "rollup-plugin-json": "^3.0.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-shim": "^1.0.0",
+    "rollup-plugin-uglify": "^3.0.0",
+    "sinon": "^4.3.0"
   }
 }
