Removed unused messages

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "flowtype/object-type-delimiter": [2, "comma"],
     "import/prefer-default-export": 0,
     "prefer-template": 0,
+    "key-spacing": 0,
     "max-len": 0,
     "global-require": 0,
     "arrow-body-style": 0,
