--- a/examples/package.json
+++ b/examples/package.json
@@ -5,7 +5,6 @@
   "description": "BlinkTradeJS example",
   "main": "bundle-node.js",
   "scripts": {
-    "webpack": "../node_modules/.bin/webpack",
     "build": "rm -rf node_modules/blinktrade && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,8 +12,5 @@
     "blinktrade": "../"
   },
   "author": "Cesar Augusto",
-  "license": "GPL-3.0",
-  "devDependencies": {
-    "babel-loader": "^6.2.10"
-  }
+  "license": "GPL-3.0"
 }
