--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-jest": "^22.2.2",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "cross-env": "^5.1.1",
     "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
