Add build:flow script

--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "lint": "eslint src test",
     "flow": "flow",
     "check": "yarn lint && yarn test ",
+    "clean:flow": "rm ./src/*.flow",
     "build:es": "cross-env NODE_ENV=es rollup -c -o es/blinktrade.js",
     "build:umd": "cross-env NODE_ENV=development rollup -c -o dist/blinktrade.js",
     "build:umd:min": "cross-env NODE_ENV=production rollup -c -o dist/blinktrade.min.js",
     "build:commonjs": "cross-env NODE_ENV=cjs rollup -c -o lib/blinktrade.js",
     "build:prod": "yarn build:umd:min",
     "build:dev": "yarn build:commonjs && yarn build:umd && yarn build:es",
-    "build": "yarn build:dev && yarn build:prod",
+    "build:flow": "for file in $(find ./src -name '*.js' -not -path '*/__mocks__*'); do cp \"$file\" `echo \"$file\" | sed 's/\\/src\\//\\/src\\//g'`.flow; done",
+    "build": "yarn build:dev && yarn build:prod && yarn build:flow",
     "prepare": "yarn build",
     "test": "jest",
     "test:cov": "jest --coverage",
