--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,4 @@
 {
-  "env": {
-    "mocha": true
-  },
   "extends": ["airbnb-base", "plugin:flowtype/recommended"],
   "parser": "babel-eslint",
   "rules": {
@@ -16,6 +13,7 @@
     "arrow-body-style": 0,
     "arrow-parens": 0,
     "consistent-return": 0,
+    "quote-props": 0,
     "no-bitwise": 0,
     "no-nested-ternary": 0,
     "no-multi-spaces": 0,
@@ -23,21 +21,18 @@
     "no-case-declarations": 0,
     "newline-per-chained-call": 0,
     "class-methods-use-this": 0,
+    "object-curly-spacing": ["error", "always", { "objectsInObjects": false }],
     "import/no-extraneous-dependencies": [2, { devDependencies: true }],
     "no-unused-vars": [2, {"varsIgnorePattern": "Columns|VerificationData" }],
     "new-cap": [2, { "newIsCapExceptions": [ "hmac" ] }],
     "object-curly-newline": 0
   },
   "globals": {
-    "BlinkTradeBase": true,
-    "BlinkTradeRest": true,
-    "BlinkTradeWS":  true,
-    "BlinkTradeEnv": true,
-    "Stun": true,
-    "Request": true,
-    "Listener": true,
     "window": true,
+    "document": true,
+    "describe": true,
     "expect": true,
+    "test": true,
     "jest": true
   },
   "plugins": ["flowtype"]
