--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint src test",
     "flow": "flow",
     "check": "yarn lint && yarn test ",
-    "clean:flow": "rm ./src/*.flow",
+    "clean:flow": "rm ./src/**/*.flow",
     "build:es": "cross-env NODE_ENV=es rollup -c -o es/blinktrade.js",
     "build:umd": "cross-env NODE_ENV=development rollup -c -o dist/blinktrade.js",
     "build:umd:min": "cross-env NODE_ENV=production rollup -c -o dist/blinktrade.min.js",
@@ -46,28 +46,29 @@
     "ws": "^5.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.0.2",
-    "babel-jest": "^22.2.2",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-flow": "^6.23.0",
+    "babel-jest": "^23.6.0",
     "cross-env": "^5.1.1",
     "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-import": "^2.8.0",
-    "flow-bin": "^0.77.0",
-    "jest": "^22.2.2",
-    "jest-cli": "^22.2.2",
-    "rollup": "^0.59.0",
-    "rollup-plugin-babel": "^3.0.4",
-    "rollup-plugin-commonjs": "^9.1.3",
+    "flow-bin": "^0.81.0",
+    "jest": "^23.6.0",
+    "jest-cli": "^23.6.0",
+    "rollup": "^0.66.0",
+    "rollup-plugin-babel": "^4.0.1",
+    "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-flow": "^1.1.1",
-    "rollup-plugin-json": "^3.0.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-shim": "^1.0.0",
-    "rollup-plugin-uglify": "^3.0.0",
-    "sinon": "^4.3.0"
+    "rollup-plugin-uglify": "^6.0.0"
   }
 }
