--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "env": {
     "test": {
-      "presets": ["@babel/env", "@babel/flow"]
+      "presets": ["@babel/preset-env", "@babel/preset-flow"]
     }
   }
 }
