--- a/package.json
+++ b/package.json
@@ -33,7 +33,18 @@
     "node"
   ],
   "jest": {
-    "testEnvironment": "jest-environment-node"
+    "projects": [
+      {
+        "displayName": "browser",
+        "testEnvironment": "jsdom",
+        "testMatch": ["<rootDir>/test/browser/*"]
+      },
+      {
+        "displayName": "node",
+        "testEnvironment": "jest-environment-node",
+        "testMatch": ["<rootDir>/test/node/*"]
+      }
+    ]
   },
   "author": "Cesar Augusto, Rodrigo Souza",
   "license": "GPLv3",
@@ -63,6 +74,7 @@
     "flow-bin": "^0.81.0",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
+    "nock": "^10.0.1",
     "rollup": "^0.66.0",
     "rollup-plugin-babel": "^4.0.1",
     "rollup-plugin-commonjs": "^9.1.8",
