--- a/.eslintrc
+++ b/.eslintrc
@@ -5,10 +5,13 @@
     "flowtype/space-after-type-colon": 0,
     "flowtype/semi": [2, "always"],
     "flowtype/object-type-delimiter": [2, "comma"],
+    "indent": ["error", 2, { "ignoredNodes": ["ConditionalExpression"], "SwitchCase": 1 }],
     "import/prefer-default-export": 0,
     "prefer-template": 0,
     "key-spacing": 0,
     "max-len": 0,
+    "no-console": 0,
+    "radix": 0,
     "global-require": 0,
     "arrow-body-style": 0,
     "arrow-parens": 0,
