--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "directories": {
     "test": "test"
   },
+  "bin": {
+    "blinktrade": "bin/blinktrade"
+  },
   "scripts": {
     "lint": "eslint src test",
     "flow": "flow",
@@ -18,11 +21,12 @@
     "build:umd": "cross-env NODE_ENV=development rollup -c -o dist/blinktrade.js",
     "build:umd:min": "cross-env NODE_ENV=production rollup -c -o dist/blinktrade.min.js",
     "build:commonjs": "cross-env NODE_ENV=cjs rollup -c -o lib/blinktrade.js",
+    "build:cli": "cross-env NODE_ENV=cjs rollup -c -o bin/blinktrade && echo \"#!/usr/bin/env node\\n\\n$(cat bin/blinktrade)\" > bin/blinktrade",
     "build:prod": "yarn build:umd:min",
     "build:dev": "yarn build:commonjs && yarn build:umd && yarn build:es",
     "build:flow:index": "for i in dist lib es; do sed 's/\\./..\\/src/g' src/index.js > $i/blinktrade.js.flow; done",
     "build:flow": "for file in $(find ./src -name '*.js' -not -path '*/__mocks__*'); do cp \"$file\" `echo \"$file\" | sed 's/\\/src\\//\\/src\\//g'`.flow; done && yarn build:flow:index",
-    "build": "yarn build:dev && yarn build:prod && yarn build:flow",
+    "build": "yarn build:dev && yarn build:prod && yarn build:cli && yarn build:flow",
     "prepare": "yarn build",
     "test": "jest",
     "test:cov": "jest --coverage",
@@ -37,20 +41,28 @@
       {
         "displayName": "browser",
         "testEnvironment": "jsdom",
-        "testMatch": ["<rootDir>/test/browser/*"]
+        "testMatch": [
+          "<rootDir>/test/browser/*"
+        ]
       },
       {
         "displayName": "node",
         "testEnvironment": "jest-environment-node",
-        "testMatch": ["<rootDir>/test/node/*"]
+        "testMatch": [
+          "<rootDir>/test/node/*"
+        ]
       }
     ]
   },
   "author": "Cesar Augusto, Rodrigo Souza",
   "license": "GPLv3",
   "dependencies": {
+    "commander": "^2.19.0",
+    "dotenv": "^6.1.0",
     "eventemitter2": "^5.0.1",
     "fetch-ponyfill": "^6.0.2",
+    "inquirer": "^6.2.0",
+    "invariant": "^2.2.4",
     "ip": "^1.1.3",
     "js-sha256": "^0.9.0",
     "macaddress-secure": "^0.2.11",
@@ -63,6 +75,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-flow": "^7.0.0",
+    "@babel/register": "7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.0.2",
     "babel-jest": "^23.6.0",
