--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blinktrade",
-  "version": "0.1.0-beta.12",
+  "version": "1.0.0-rc.0",
   "description": "BlinkTrade client for node.js",
   "homepage": "https://blinktrade.com/docs",
   "main": "lib/blinktrade.js",
